[package]
name = "termutils"
version = "0.1.0"
edition = "2021"
authors = ["Soumyo Deep Gupta <deep.main.ac@gmail.com>"]
keywords = ["d33pster", "termutils", "terminal-utilities", "utilities", "terminal"]
description = "All your favourite utilities in one place."
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/d33pster/termutils"
categories = ["command-line-utilities", "filesystem"]

[dependencies]
argrust = "0.1.0"
chrono = "0.4.38"
colored = "2.1.0"
colorized = "1.0.0"
git2 = "0.18.3"
rustypath = "0.1.1"

[[bin]]
name = "cls"
path = "src/cls.rs"

[[bin]]
name = "term"
path = "src/main.rs"

[[bin]]
name = "gst"
path = "src/gst.rs"

[[bin]]
name = "gcl"
path = "src/gcl.rs"
